# factor_graph

./: README.md
factor_graph_optimize/: CMakeLists.txt
factor_graph_optimize/dataset/: killian.g2o  test3d.g2o  torus3d_guess.g2o
factor_graph_optimize/log/: optimized.txt  optimized3d.txt  original3d.txt
factor_graph_optimize/src/: main.cc
factor_graph_optimize/src/core/: factor.cc  factor.h  factor_graph.h  graph_optimize.cc  graph_optimize.h  sparsity_pattern.cc  sparsity_pattern.h  utils.h  variable.h
factor_graph_optimize/src/slam/: test_point2point.h  test_point2pose.h  test_slam3d_g2o.h  test_slam_g2o.h
factor_graph_optimize/src/test/: test_slam2d.h
factor_graph_optimize/src/types/: bivariate_factor.h  univariate_factor.h  variable_type.h
factor_graph_optimize/visual/: trajectory_plot.py
